@@ -4,6 +4,8 @@
  * Now the delay to update the video while dragging the time slider can
    be configured in smplayer.ini, option time_slider_drag_delay. The
    value by default is 100 (milliseconds).
+ * The scale field in Preferences->Subtitles now accepts doubles.
+   Fixes bug #1876114.
 
 (2008-01-21)
  * Added some new icons to the default theme taken from nuvoX 
